# raylib-starter

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile.maintenance  LICENSE  MAINTENANCE.md  README.md  build.sh  maintain.sh  mingw-toolchain.cmake  shell.html
include/miniz/: miniz.h
lua/: defs.lua  main.lua  raylib.lua
scripts/: update-all.sh  update-luajit.sh  update-miniz.sh  update-raylib.sh
src/: filesystem.cpp  filesystem.hpp  main.cpp
